# liverMRI

./: README.md  pyproject.toml
conf/base/: catalog.yml  logging.yml
conf/base/parameters/: SSL.yaml  data_processing.yml  data_science.yml
docs/source/: conf.py  index.rst
src/: requirements.txt  setup.py
src/radiologyml/: __init__.py  __main__.py  settings.py
src/radiologyml/pipelines/SSL/: convert_to_deit.py  main_moco.py  nodes.py  pipeline.py
src/radiologyml/pipelines/SSL/moco/: builder.py  loader.py
src/radiologyml/pipelines/data_processing/: nodes.py  pipeline.py
src/radiologyml/pipelines/data_science/: liver_training.py  nodes.py  pipeline.py
src/tests/: test_run.py
