[project]
name = "livermri"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black~=22.0",
    "flake8>=3.7.9,<5.0",
    "h5py~=3.8",
    "ipython>=7.31.1,<8.0 ; python_full_version < '3.8'",
    "ipython~=8.10 ; python_full_version >= '3.8'",
    "isort~=5.0",
    "jupyter~=1.0",
    "jupyterlab~=3.0",
    "jupyterlab-server>=2.11.1,<2.16.0",
    "kedro~=0.18.11",
    "kedro-datasets[pandas-csvdataset,pandas-exceldataset,pandas-parquetdataset]~=1.0",
    "kedro-telemetry~=0.2.0",
    "kedro-viz~=6.0",
    "nbstripout~=0.4",
    "numpy~=1.24",
    "pandas~=1.5",
    "pillow~=9.2",
    "pydicom~=2.3",
    "pytest~=7.2",
    "pytest-cov~=3.0",
    "pytest-mock>=1.7.1,<2.0",
    "scikit-image~=0.21",
    "scikit-learn~=1.0",
    "scipy~=1.10",
    "tensorboard~=2.13.0",
    "timm~=0.5.4",
    "torch~=2.0",
    "torchvision~=0.14",
]

[tool.kedro]
package_name = "liverMRI"
project_name = "LiverMRI"
kedro_init_version = "0.18.11"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/radiologyml -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]
